[package]
name = "fitzgerald-source-separation"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["default_fonts"] }
egui = "0.33.3"
log = "0.4.29"
num = "0.4.3"
rfd = "0.17.2"
symphonia = { version = "0.5.5", features = ["all"] }
thiserror = "1.0"
hound = "3.5"
colorous = "1.0.16"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
poll-promise = { version = "0.3.0", features = ["smol", "smol_tick_poll"] }
cpal = "0.17.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { version = "0.3.0", features = ["web"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.70", features = ["AudioContext"] }
js-sys = "0.3"
cpal = { version = "0.17.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"



[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
